[package]
name = "tetcore-mod-nft"
version = "0.1.0"
edition = "2021"
description = "Commodities Fabric Module: NFTs for Tetcore"
license = "MIT"
authors = ["Tetcore Team"]
documentation = "https://docs.tetcore.org/modules/nft"

[dependencies]
tetcore-primitives = { path = "../tetcore/tetcore-primitives" }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"

[features]
default = ["std"]
std = ["serde/std"]

[package.metadata.docs.rs]
all-features = true
